--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,8 @@ License: MIT license
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Imports: tidyverse,
+    mixOmics,
+    ggthemes,
+    magrittr
+Suggests: cowplot
