Depend on ggthemes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,4 +16,5 @@ import(ggthemes)
 export(ggvarplot)
 import(mixOmics)
 import(tidyverse)
+importFrom(ggthemes,"scale_color_few")
 importFrom(magrittr,"%>%")
