Fix imports to accomodate ggvarplot.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,9 @@ S3method(ggvarplot,pca)
 S3method(ggvarplot,sgccda)
 export(.extractor)
 export(ggcompplot)
-import(cowplot)
-import(ggthemes)
 export(ggvarplot)
 import(mixOmics)
 import(tidyverse)
+importFrom(ggrepel,"geom_text_repel")
 importFrom(ggthemes,"scale_color_few")
 importFrom(magrittr,"%>%")
