Initial commit for biplot combined comp and var plot.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(ggvarplot,DA)
 S3method(ggvarplot,pca)
 S3method(ggvarplot,sgccda)
 export(.extractor)
+export(ggbiplot)
 export(ggcompplot)
 export(ggvarplot)
 import(mixOmics)
