First working build ggbiplot using generic method dispatch.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 S3method(.extractor,DA)
 S3method(.extractor,pca)
 S3method(.extractor,sgccda)
+S3method(ggbiplot,DA)
+S3method(ggbiplot,pca)
+S3method(ggbiplot,sgccda)
 S3method(ggcompplot,DA)
 S3method(ggcompplot,pca)
 S3method(ggcompplot,sgccda)
