--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,6 @@ export(ggcompplot)
 export(ggvarplot)
 import(mixOmics)
 import(tidyverse)
+importFrom(ggrepel,"geom_text_repel")
 importFrom(ggthemes,"scale_color_few")
 importFrom(magrittr,"%>%")
